--- a/LEC6/index.html
+++ b/LEC6/index.html
@@ -17,6 +17,37 @@
             </p>
         </p>
     </p>
- -->
+
+To create both simultaneously article + section    
+<article></article>
+<section></section>
+-->
+<div class="container">
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, voluptates.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet, modi.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, atque saepe possimus illum error hic!</p>
+        <ul>
+            <li>hi</li>
+            <li>hello</li>
+            <li>how</li>
+            <li>you</li>
+        </ul>
+    </section>
+</div>
+<div style="background-color:red">This is my div tag </div>
+<div style="background-color:red">This is my div tag </div>
+<span style="background-color: rgb(255, 243, 71);">This is span tag</span>
+<span style="background-color: rgb(255, 243, 71);">This is span tag</span>
+<p style="background-color: chartreuse; display: inline;">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+
+<nav>
+    <ul style="list-style-type:none;">
+        <li style="display:inline;"><a href="">Home</a></li>
+        <li style="display:inline"><a href="">Contact</a></li>
+        <li style="display:inline"><a href="">Login</a></li>
+        <li style="display:inline"><a href="">Register</a></li>
+    </ul>
+</nav>
 </body>
 </html>
